<resources>
    <string name="hello_world">MyComms is great!</string>
    <string name="action_settings">Settings</string>
    <string name="login">Login</string>
    <string name="signup">Signup</string>
    <string name="email">Email</string>
    <string name="email_lower">email</string>
    <string name="enter_email_address">Enter email address*</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="password">Password</string>
    <string name="enter_password">Enter password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="country">Country</string>
    <string name="phone_number">Phone Number</string>
    <string name="title_activity_login_signup">LoginSignupActivity</string>
    <string name="title_activity_signup_mail">SignupMailActivity</string>
    <string name="title_activity_signup_name">SignupNameActivity</string>
    <string name="title_activity_singup_pass">SingupPassActivity</string>
    <string name="title_activity_signup_phone">SignupPhoneActivity</string>
    <string name="add_a_photo">Add a photo</string>
    <string name="enter_your_first_name_to_continue">Enter your first name to continue</string>
    <string name="enter_your_last_name_to_continue">Enter your last name to continue</string>
    <string name="enter_your_email_to_continue">Enter your email to continue</string>
    <string name="select_your_phone_country_to_continue">Select your phone country to continue</string>
    <string name="select_your_company_to_continue">Select your company to continue</string>
    <string name="enter_your_phone_number_to_continue">Enter your phone number to continue</string>
    <string name="select_a_country_from_the_list">Select a country from the list</string>
    <string name="how_would_you_like_to_add_a_photo">How would you like to add a photo?</string>
    <string name="we_need_your_picture">We Need Your Picture!</string>
    <string name="please_share_your_smile">Please share your smile with your colleagues</string>
    <string name="cancel">Cancel</string>
    <string name="invite">Invite</string>
    <string name="accept">Accept</string>
    <string name="home">Home</string>
    <string name="attention">Attention</string>
    <string name="incorrect_format">Incorrect format</string>
    <string name="add_a_photo_to_continue">Add a photo to continue</string>
    <string name="resend_code">Resend Code</string>
    <string name="resend_email">Resend Email</string>
    <string name="passwords_do_not_match">Passwords do not match</string>
    <string name="password_explanation">Passwords must contain at lease 8 characters with at least one capital, one lower, and one number</string>
    <string name="update2">Update</string>
    <string name="downloading_new_version">Downloading new version</string>
    <string name="no_internet_connection_log_in_needed">No Internet connection available, we need you log in</string>
    <string name="please_check_the_download_status_in_the_notifications_bar">Please check download status in the notifications bar</string>
    <string-array name="add_photo_chooser">
        <item>Take a photo</item>
        <item>Choose from Gallery</item>
    </string-array>
    <string name="title_activity_pincode">PincodeActivity</string>
    <string name="your_sms_verification_code_has_been_sent_to">Your SMS verification code has been sent to</string>
    <string name="having_trouble">Having trouble?</string>
    <string name="company">Company</string>
    <string name="position">Position</string>
    <string name="wrong_profile_update">Error during profile update</string>
    <string name="new_version_available">New Version Available</string>
    <string name="must_update_to_last_application_version">Must update to last application version</string>
    <string name="update">Update!</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="contact_list_tab_favorites">Favorites</string>
    <string name="contact_list_tab_recents">Recents</string>
    <string name="contact_list_tab_contacts">Contacts</string>
    <string name="title_activity_toolbar">ToolbarActivity</string>
    <string name="title_activity_chat_main">ChatMainActivity</string>
    <string name="user_already_exists">User already exists</string>
    <string name="the_entered_email_is_registered">The entered email is registered for another user. Please try with another email</string>
    <string name="the_entered_email_is_registered_2">The entered email is registered. Please Login.</string>
    <string name="ok">OK</string>
    <string name="uh_oh">Uh Oh!</string>
    <string name="title_activity_mail_sent">MailSentActivity</string>
    <string name="verify_email">Verify Email</string>
    <string name="we_sent_an_email_to">We sent an email to</string>
    <string name="please_check_your_inbox">Please check your inbox and follow the link to verify your address.</string>
    <string name="sign_up">Sign</string>
    <string name="title_activity_signup_type_choose">SignupTypeChoose</string>
    <string name="sign_up_with_salesforce">Sign up with Salesforce</string>
    <string name="sign_up_with_email">Sign up with Email</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="login_with_email">Login with Email</string>
    <string name="login_with_salesforce">Login with Salesforce</string>
    <string name="or">OR</string>
    <string name="dont_have_salesforce">Don\'t have Salesforce?</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="oops_wrong_password">Oops, wrong password</string>
    <string name="oops_wrong_email">Oops, wrong email</string>
    <string name="title_activity_forgot_pass">ForgotPassActivity</string>
    <string name="send_new_password">Send new password</string>
    <string name="new_password_sent">New password sent</string>
    <string name="we_have_sent_you_an_email">We have sent you an email with your new password</string>
    <string name="profile_list_tab_preferences">Preferences</string>
    <string name="profile_list_tab_accounts">Accounts</string>
    <string name="profile_list_tab_my_profile">Profile</string>
    <string name="title_activity_profile">Profile</string>
    <string name="no_internet_connection_is_available">No Internet connection is available</string>
    <string name="error_reading_data_from_server">Error reading data from server</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="connection_error">Connection error</string>
    <string name="status_not_sent">Not sent</string>
    <string name="status_sent">Sent</string>
    <string name="status_delivered">Delivered</string>
    <string name="status_read">Read</string>
    <string name="pref_file_tokens">com.vodafone.mycomms.PREF_FILE_TOKENS</string>
    <string-array name="phones_array">
        <item>Mobile</item>
        <item>Personal</item>
        <item>Home</item>
        <item>Work</item>
    </string-array>
    <string-array name="email_array">
        <item>House</item>
        <item>Work</item>
        <item>Other</item>
    </string-array>
    <string name="title_activity_oauth_web">OAuthWebActivity</string>
    <string name="no_favorite_records">Store a list of your favorite contacts.\nGet started by adding to this list.\n\nSwipe right on a contact in order to add it to your favorite contacts.</string>
    <string name="no_recent_records">You have no recent interactions with other users</string>
    <string name="no_group_chat_records">Select the people you want to chat with</string>
    <string name="no_search_records">No results found</string>
    <string name="toolbar_title_messages">Messages</string>
    <string name="toolbar_title_contact_list">Contacts</string>
    <string name="toolbar_title_contacts">Contacts</string>
    <string name="profile_edit_mode_done">Done</string>
    <string name="profile_edit_mode_edit">Edit</string>
    <string name="toolbar_group_chat_title_messages">Add to Group</string>
    <string name="title">Title</string>
    <string name="chat_me_text">"Me: "</string>
    <string name="DummyTime">Thursday 18:40 a.m</string>
    <string name="availability">Availability</string>
    <string name="dummyCountry">USA</string>
    <string name="badge">badge</string>
    <string name="dummyUser">Captain Planet</string>
    <string name="Contacts">Contacts</string>
    <string name="Recents">Recents</string>
    <string name="Favorites">Favorites</string>
    <string name="dummyShortDay">Tue</string>
    <string name="VacationTime">Vacation Time</string>
    <string name="DoNotDisturb">Do Not Disturb</string>
    <string name="dummyHour">12:30</string>
    <string name="dummyOneMore">+1</string>
    <string name="dummyChat1">Me: And I say Hello. Hello Hello!</string>
    <string name="dummyPhrase">Saviour of the Planet</string>
    <string name="dummyUser2">Jack Sheppard</string>
    <string name="Edit">Edit</string>
    <string name="Sent">Sent</string>
    <string name="dummyAddress">742, Evergreen Terrace</string>
    <string name="office_location">Office Location</string>
    <string name="address">Address</string>
    <string name="dummyEmail">ruben_bujalance@stratesys-ts.com</string>
    <string name="repeatPassword">Repeat Password</string>
    <string name="additional">Additional</string>
    <string name="additionalinformation">Additional Information</string>
    <string name="dummyPhone">+34 684503080</string>
    <string name="phoneNumber">Phone Number</string>
    <string name="Loremipsum">Lorem Ipsum</string>
    <string name="Office">Office</string>
    <string name="department">Department</string>
    <string name="skype">skype</string>
    <string name="dummyCompany">Vodafone Global Enterprise</string>
    <string name="companyname">Company name</string>
    <string name="dummyPosition">Senior Enterprise Manager</string>
    <string name="dummyUserfull">Smith Doe, John</string>
    <string name="dummylastseen">Seen 2d ago</string>
    <string name="job_title">Job Title</string>
    <string name="mobile">mobile</string>
    <string name="phone">Phone</string>
    <string name="phone_lower">phone</string>
    <string name="latestNews">Latest News</string>
    <string name="Logout">Logout</string>
    <string name="Chat">"Chat   "</string>
    <string name="Surname">Surname</string>
    <string name="office">office</string>
    <string name="about_my_comms">About MyComms</string>
    <string name="dummyCompany2">Planet Earth Company</string>
    <string name="add">Add</string>
    <string name="credentials_are_incorrect">Credentials are incorrect - check settings</string>
    <string name="provide_your_corporate_credentials">
        <![CDATA[
        <p>Provide your Corporate credentials to access the <b>Global Contacts list</b></p>]]>
    </string>
    <string name="ldap_need_help_with_your_username">
        <![CDATA[<p><font color=\"#0071ff\">* Need help with your username?</font></p>
        <p>For most users, their <b>corporate email</b> is their <b>Windows Username</b></p>
        <p>If you find this doesn\'t work please try the following <b>alternative</b> on your computer:</p>
        <p>1. Press <b>CTRL-ALT-DEL</b></p>
        <p>2. Select <b>\"Lock this computer\"</b></p>
        <p>3. Identify your user in the screen as <b>\"Your name\" (VF-ROOT\User)</b></p>
        <p>4. Enter VF-ROOT\User as your Windows user</p>
        <p>If this still doesn\'t work, <b>check with your IT team</b> as your account may have a special configuration</p>
        ]]>
    </string>
    <string name="windows_username">Windows Username</string>
    <string name="windows_password">Windows Password</string>
</resources>