<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    android:filterTouchesWhenObscured="false"
    android:background="@drawable/istanbul_bg_blur"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="15dp">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:layout_marginBottom="20dp"
        android:layout_gravity="left">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ivBack"
            android:src="@drawable/btn_back_white"
            android:layout_gravity="left" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView6"
            android:layout_gravity="left" />

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_with_salesforce"
        android:id="@+id/btLoginSalesforce"
        android:layout_gravity="center"
        android:background="@drawable/bt_blue_style"
        android:drawableLeft="@drawable/ic_enroll_chatter"
        android:drawableStart="@drawable/ic_enroll_chatter"
        android:textSize="24sp"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:layout_marginBottom="10dp"
        android:paddingLeft="20dp"
        android:paddingStart="20dp"
        android:paddingTop="0dp"
        android:paddingRight="20dp"
        android:paddingEnd="20dp"
        android:paddingBottom="0dp"
         />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/or"
        android:id="@+id/textView"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:layout_marginBottom="10dp"
        android:layout_gravity="center_horizontal" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/field_login_style">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:id="@+id/etEmail"
            android:layout_marginTop="5dp"
            android:hint="@string/email" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:id="@+id/etPassword"
            android:layout_marginTop="5dp"
            android:hint="@string/password" />
    </LinearLayout>

    <Button
        style="@style/button_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:id="@+id/btLogin"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/bt_blue_style"
        android:textAllCaps="false"
        android:gravity="center_horizontal"
        android:layout_marginTop="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/forgot_password"
        android:id="@+id/tvForgotPass"
        android:layout_marginTop="20dp"
        android:textColor="#ffffff" />

</LinearLayout>