<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.vodafone.mycomms.login.MailSentActivity"
    android:background="@drawable/istanbul_bg_blur">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/verify_email"
            android:id="@+id/tvVerifyEmail"
            android:textColor="#ffffff"
            android:layout_gravity="center_horizontal"
            android:textStyle="bold"
            android:textSize="24sp"
            android:textIsSelectable="false" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:paddingTop="30dp"
            android:paddingBottom="30dp" >

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" >

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:id="@+id/imageView3"
                    android:layout_gravity="center"
                    android:src="@drawable/img_verify_email" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/we_sent_an_email_to"
            android:id="@+id/tvWeSent"
            android:textColor="#ffffff"
            android:gravity="center"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/please_check_your_inbox"
            android:id="@+id/tvPleaseCheck"
            android:textColor="#ffffff"
            android:gravity="center"
            android:layout_gravity="center_horizontal" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resend_email"
            android:id="@+id/btResendEmail"
            android:background="@drawable/bt_white_elipse_style"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:layout_marginBottom="30dp"
            android:textColor="#ffffff"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="60dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/having_trouble"
            android:id="@+id/tvHavingTrouble"
            android:textColor="#ffffff"
            android:layout_gravity="center_horizontal" />
    </LinearLayout>

</RelativeLayout>
