<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:paddingLeft="12dp"
              android:paddingStart="12dp">

    <!-- Name Label -->
    <TextView
        android:id="@+id/list_item_content_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="1dp"
        android:ellipsize="end"
        android:lines="1"
        android:singleLine="true"
        android:textSize="18sp"
        tools:text="@string/dummyUser"
        fontPath="fonts/SourceSansPro-Semibold.ttf"
        android:textColor="@color/contact_soft_black"/>

    <!-- Occupation -->
    <TextView
        android:id="@+id/list_item_content_position"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:paddingBottom="2dp"
        android:ellipsize="end"
        android:lines="1"
        android:singleLine="true"
        android:textSize="15sp"
        tools:text="@string/dummyPhrase"
        android:textColor="@color/contact_soft_grey"/>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <!-- Occupation -->
        <TextView android:id="@+id/list_item_content_company"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:textSize="14sp"
            android:ellipsize="end"
            android:lines="1"
            android:singleLine="true"
            android:orientation="vertical"
            android:layout_gravity="left"
            tools:text="@string/dummyCompany2"
            android:textColor="@color/contact_soft_grey"/>

    </LinearLayout>

</LinearLayout>
