<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:baselineAligned="false">

    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/topHeader" >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:src="@drawable/header_berlin_blur"
            android:focusable="false"
            android:tint="@color/header_background_darken"
            android:tintMode="src_over"
            android:scaleType="centerCrop"/>

        <ImageView
            android:layout_width="22dp"
            android:layout_height="34dp"
            android:id="@+id/ivBtBack"
            android:src="@drawable/icon_left_white"
            android:focusable="false"
            android:adjustViewBounds="true"
            android:layout_marginTop="14dp"
            android:layout_marginLeft="12dp"
            android:layout_marginBottom="12dp"
            android:layout_centerVertical="true"/>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/layoutErrorBar"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:baselineAligned="false"
        android:background="@color/strawberry">

        <TextView
            android:id="@+id/tvError"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/credentials_are_incorrect"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:gravity="center"
            android:textStyle="bold"
            />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView"
        android:background="@color/white">

        <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
            android:id="@+id/content">

            <TextView
                android:id="@+id/tvInitialText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/provide_your_corporate_credentials"
                android:textSize="20sp"
                android:gravity="center"
                android:layout_marginLeft="40dp"
                android:layout_marginStart="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginEnd="40dp"
                android:layout_marginTop="14dp"
                android:lineSpacingExtra="3dp"/>

            <View
                android:layout_width="332dp"
                android:layout_height="1px"
                android:background="@color/grey_light"
                android:layout_gravity="center_horizontal"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="14dp"
                android:layout_marginStart="14dp"
                android:layout_marginRight="14dp"
                android:layout_marginEnd="14dp"
                >
                <TextView
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:text="@string/windows_username"
                    android:textSize="14sp"
                    android:layout_gravity="center_vertical"
                    android:textColor="@color/grey_middle"
                />

                <EditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:hint="@string/enter_email_address"
                    android:textColorHint="@color/grey_light"
                    android:inputType="textEmailAddress"
                    android:background="@color/white"
                    android:textSize="14sp"
                    android:layout_gravity="center_vertical"
                    android:lines="1"/>
                <!--android:text="luis.mesas@vodafone.com"-->
            </LinearLayout>

            <View
                android:layout_width="332dp"
                android:layout_height="1px"
                android:background="@color/grey_light"
                android:layout_gravity="center_horizontal"/>

            <LinearLayout
                android:id="@+id/lay_email"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                >
                <TextView
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:text="@string/windows_password"
                    android:textSize="14sp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="14dp"
                    android:layout_marginStart="14dp"
                    android:textColor="@color/grey_middle"
                    />

                <EditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:hint="@string/enter_password"
                    android:textColorHint="@color/grey_light"
                    android:inputType="textPassword"
                    android:background="@color/white"
                    android:textSize="14sp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="14dp"
                    android:layout_marginEnd="14dp"
                    android:lines="1"
                    />
                <!--android:text="Intelygenz02"-->
            </LinearLayout>

            <View
                android:layout_width="332dp"
                android:layout_height="1px"
                android:background="@color/grey_light"
                android:layout_gravity="center_horizontal"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add"
                android:id="@+id/btAddAccount"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/bt_blue_style"
                android:textSize="24sp"
                android:textColor="@color/white"
                android:textAllCaps="false"
                android:layout_marginTop="50dp"
                android:layout_marginLeft="27dp"
                android:layout_marginStart="27dp"
                android:layout_marginRight="27dp"
                android:layout_marginEnd="27dp" />

            <TextView
                android:id="@+id/tvExplanationText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ldap_need_help_with_your_username"
                android:textSize="15sp"
                android:gravity="start"
                android:layout_marginLeft="14dp"
                android:layout_marginStart="14dp"
                android:layout_marginRight="14dp"
                android:layout_marginEnd="14dp"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp" />


        </LinearLayout>

    </ScrollView>
</LinearLayout>