<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    android:filterTouchesWhenObscured="false"
    android:background="@drawable/istanbul_bg_blur"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="15dp">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:layout_marginBottom="100dp"
        android:layout_gravity="left">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btBack"
            android:src="@drawable/btn_back_white"
            android:layout_gravity="left" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView6"
            android:layout_gravity="left" />

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_with_salesforce"
        android:id="@+id/btSignupSalesforce"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/bt_blue_style"
        android:drawableLeft="@drawable/ic_enroll_chatter"
        style="@style/button_text"
        android:textAllCaps="false"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="40dp"
        android:gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/dont_have_salesforce"
        android:id="@+id/textView"
        android:textColor="#ffffff"
        android:textSize="20dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_with_email"
        android:id="@+id/btSignupMail"
        style="@style/button_text"
        android:background="@drawable/bt_grey_style"
        android:drawableLeft="@drawable/ic_enrroll_email_white"
        android:textAllCaps="false"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:gravity="center_horizontal" />

</LinearLayout>